python_project/tnsnames_python/tnsnamesParser.py
# Generated from tnsnamesParser.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class tnsnamesParser ( Parser ):

    grammarFileName = "tnsnamesParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'['", u"']'", u"<INVALID>", 
                     u"'.'", u"','", u"'\"'", u"'''" ]

    symbolicNames = [ u"<INVALID>", u"L_PAREN", u"R_PAREN", u"L_SQUARE", 
                      u"R_SQUARE", u"EQUAL", u"DOT", u"COMMA", u"D_QUOTE", 
                      u"S_QUOTE", u"CONNECT_DATA", u"DESCRIPTION_LIST", 
                      u"DESCRIPTION", u"ADDRESS_LIST", u"ADDRESS", u"PROTOCOL", 
                      u"TCP", u"HOST", u"PORT", u"LOCAL", u"IP", u"YES_NO", 
                      u"ON_OFF", u"TRUE_FALSE", u"COMMENT", u"INT", u"OK", 
                      u"DEDICATED", u"SHARED", u"POOLED", u"LOAD_BALANCE", 
                      u"FAILOVER", u"UR", u"UR_A", u"ENABLE", u"BROKEN", 
                      u"SDU", u"RECV_BUF", u"SEND_BUF", u"SOURCE_ROUTE", 
                      u"SERVICE", u"SERVICE_TYPE", u"KEY", u"IPC", u"SPX", 
                      u"NMP", u"BEQ", u"PIPE", u"PROGRAM", u"ARGV0", u"ARGS", 
                      u"SECURITY", u"SSL_CERT", u"CONN_TIMEOUT", u"RETRY_COUNT", 
                      u"TCT", u"IFILE", u"DQ_STRING", u"SERVICE_NAME", u"SID", 
                      u"INSTANCE_NAME", u"FAILOVER_MODE", u"GLOBAL_NAME", 
                      u"HS", u"RDB_DATABASE", u"SERVER", u"BACKUP", u"TYPE", 
                      u"SESSION", u"SELECT", u"NONE", u"METHOD", u"BASIC", 
                      u"PRECONNECT", u"RETRIES", u"DELAY", u"QUAD", u"ID", 
                      u"WS", u"I_EQUAL", u"I_STRING", u"ISQ_STRING", u"IUQ_STRING", 
                      u"I_WS", u"I_COMMENT" ]

    RULE_tnsnames = 0
    RULE_tns_entry = 1
    RULE_ifile = 2
    RULE_lsnr_entry = 3
    RULE_lsnr_description = 4
    RULE_alias_list = 5
    RULE_alias = 6
    RULE_description_list = 7
    RULE_dl_params = 8
    RULE_dl_parameter = 9
    RULE_description = 10
    RULE_d_params = 11
    RULE_d_parameter = 12
    RULE_d_enable = 13
    RULE_d_sdu = 14
    RULE_d_recv_buf = 15
    RULE_d_send_buf = 16
    RULE_d_service_type = 17
    RULE_d_security = 18
    RULE_d_conn_timeout = 19
    RULE_d_retry_count = 20
    RULE_d_tct = 21
    RULE_ds_parameter = 22
    RULE_address_list = 23
    RULE_al_params = 24
    RULE_al_parameter = 25
    RULE_al_failover = 26
    RULE_al_load_balance = 27
    RULE_al_source_route = 28
    RULE_address = 29
    RULE_a_params = 30
    RULE_a_parameter = 31
    RULE_protocol_info = 32
    RULE_tcp_protocol = 33
    RULE_tcp_params = 34
    RULE_tcp_parameter = 35
    RULE_tcp_host = 36
    RULE_tcp_port = 37
    RULE_tcp_tcp = 38
    RULE_host = 39
    RULE_port = 40
    RULE_ipc_protocol = 41
    RULE_ipc_params = 42
    RULE_ipc_parameter = 43
    RULE_ipc_ipc = 44
    RULE_ipc_key = 45
    RULE_spx_protocol = 46
    RULE_spx_params = 47
    RULE_spx_parameter = 48
    RULE_spx_spx = 49
    RULE_spx_service = 50
    RULE_nmp_protocol = 51
    RULE_nmp_params = 52
    RULE_nmp_parameter = 53
    RULE_nmp_nmp = 54
    RULE_nmp_server = 55
    RULE_nmp_pipe = 56
    RULE_beq_protocol = 57
    RULE_beq_params = 58
    RULE_beq_parameter = 59
    RULE_beq_beq = 60
    RULE_beq_program = 61
    RULE_beq_argv0 = 62
    RULE_beq_args = 63
    RULE_ba_parameter = 64
    RULE_ba_description = 65
    RULE_bad_params = 66
    RULE_bad_parameter = 67
    RULE_bad_local = 68
    RULE_bad_address = 69
    RULE_connect_data = 70
    RULE_cd_params = 71
    RULE_cd_parameter = 72
    RULE_cd_service_name = 73
    RULE_cd_sid = 74
    RULE_cd_instance_name = 75
    RULE_cd_failover_mode = 76
    RULE_cd_global_name = 77
    RULE_cd_hs = 78
    RULE_cd_rdb_database = 79
    RULE_cd_server = 80
    RULE_cd_ur = 81
    RULE_fo_params = 82
    RULE_fo_parameter = 83
    RULE_fo_type = 84
    RULE_fo_backup = 85
    RULE_fo_method = 86
    RULE_fo_retries = 87
    RULE_fo_delay = 88

    ruleNames =  [ u"tnsnames", u"tns_entry", u"ifile", u"lsnr_entry", u"lsnr_description", 
                   u"alias_list", u"alias", u"description_list", u"dl_params", 
                   u"dl_parameter", u"description", u"d_params", u"d_parameter", 
                   u"d_enable", u"d_sdu", u"d_recv_buf", u"d_send_buf", 
                   u"d_service_type", u"d_security", u"d_conn_timeout", 
                   u"d_retry_count", u"d_tct", u"ds_parameter", u"address_list", 
                   u"al_params", u"al_parameter", u"al_failover", u"al_load_balance", 
                   u"al_source_route", u"address", u"a_params", u"a_parameter", 
                   u"protocol_info", u"tcp_protocol", u"tcp_params", u"tcp_parameter", 
                   u"tcp_host", u"tcp_port", u"tcp_tcp", u"host", u"port", 
                   u"ipc_protocol", u"ipc_params", u"ipc_parameter", u"ipc_ipc", 
                   u"ipc_key", u"spx_protocol", u"spx_params", u"spx_parameter", 
                   u"spx_spx", u"spx_service", u"nmp_protocol", u"nmp_params", 
                   u"nmp_parameter", u"nmp_nmp", u"nmp_server", u"nmp_pipe", 
                   u"beq_protocol", u"beq_params", u"beq_parameter", u"beq_beq", 
                   u"beq_program", u"beq_argv0", u"beq_args", u"ba_parameter", 
                   u"ba_description", u"bad_params", u"bad_parameter", u"bad_local", 
                   u"bad_address", u"connect_data", u"cd_params", u"cd_parameter", 
                   u"cd_service_name", u"cd_sid", u"cd_instance_name", u"cd_failover_mode", 
                   u"cd_global_name", u"cd_hs", u"cd_rdb_database", u"cd_server", 
                   u"cd_ur", u"fo_params", u"fo_parameter", u"fo_type", 
                   u"fo_backup", u"fo_method", u"fo_retries", u"fo_delay" ]

    EOF = Token.EOF
    L_PAREN=1
    R_PAREN=2
    L_SQUARE=3
    R_SQUARE=4
    EQUAL=5
    DOT=6
    COMMA=7
    D_QUOTE=8
    S_QUOTE=9
    CONNECT_DATA=10
    DESCRIPTION_LIST=11
    DESCRIPTION=12
    ADDRESS_LIST=13
    ADDRESS=14
    PROTOCOL=15
    TCP=16
    HOST=17
    PORT=18
    LOCAL=19
    IP=20
    YES_NO=21
    ON_OFF=22
    TRUE_FALSE=23
    COMMENT=24
    INT=25
    OK=26
    DEDICATED=27
    SHARED=28
    POOLED=29
    LOAD_BALANCE=30
    FAILOVER=31
    UR=32
    UR_A=33
    ENABLE=34
    BROKEN=35
    SDU=36
    RECV_BUF=37
    SEND_BUF=38
    SOURCE_ROUTE=39
    SERVICE=40
    SERVICE_TYPE=41
    KEY=42
    IPC=43
    SPX=44
    NMP=45
    BEQ=46
    PIPE=47
    PROGRAM=48
    ARGV0=49
    ARGS=50
    SECURITY=51
    SSL_CERT=52
    CONN_TIMEOUT=53
    RETRY_COUNT=54
    TCT=55
    IFILE=56
    DQ_STRING=57
    SERVICE_NAME=58
    SID=59
    INSTANCE_NAME=60
    FAILOVER_MODE=61
    GLOBAL_NAME=62
    HS=63
    RDB_DATABASE=64
    SERVER=65
    BACKUP=66
    TYPE=67
    SESSION=68
    SELECT=69
    NONE=70
    METHOD=71
    BASIC=72
    PRECONNECT=73
    RETRIES=74
    DELAY=75
    QUAD=76
    ID=77
    WS=78
    I_EQUAL=79
    I_STRING=80
    ISQ_STRING=81
    IUQ_STRING=82
    I_WS=83
    I_COMMENT=84

    def __init__(self, input, output=sys.stdout):
        super(tnsnamesParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TnsnamesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.TnsnamesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def tns_entry(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.Tns_entryContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.Tns_entryContext,i)


        def ifile(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.IfileContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.IfileContext,i)


        def lsnr_entry(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.Lsnr_entryContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.Lsnr_entryContext,i)


        def getRuleIndex(self):
            return tnsnamesParser.RULE_tnsnames

        def enterRule(self, listener):
            if hasattr(listener, "enterTnsnames"):
                listener.enterTnsnames(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTnsnames"):
                listener.exitTnsnames(self)




    def tnsnames(self):

        localctx = tnsnamesParser.TnsnamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tnsnames)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tnsnamesParser.IFILE or _la==tnsnamesParser.ID:
                self.state = 181
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 178
                    self.tns_entry()
                    pass

                elif la_ == 2:
                    self.state = 179
                    self.ifile()
                    pass

                elif la_ == 3:
                    self.state = 180
                    self.lsnr_entry()
                    pass


                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tns_entryContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.Tns_entryContext, self).__init__(parent, invokingState)
            self.parser = parser

        def alias_list(self):
            return self.getTypedRuleContext(tnsnamesParser.Alias_listContext,0)


        def EQUAL(self):
            return self.getToken(tnsnamesParser.EQUAL, 0)

        def description_list(self):
            return self.getTypedRuleContext(tnsnamesParser.Description_listContext,0)


        def description(self):
            return self.getTypedRuleContext(tnsnamesParser.DescriptionContext,0)


        def getRuleIndex(self):
            return tnsnamesParser.RULE_tns_entry

        def enterRule(self, listener):
            if hasattr(listener, "enterTns_entry"):
                listener.enterTns_entry(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTns_entry"):
                listener.exitTns_entry(self)




    def tns_entry(self):

        localctx = tnsnamesParser.Tns_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tns_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.alias_list()
            self.state = 187
            self.match(tnsnamesParser.EQUAL)
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 188
                self.description_list()
                pass

            elif la_ == 2:
                self.state = 189
                self.description()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.IfileContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IFILE(self):
            return self.getToken(tnsnamesParser.IFILE, 0)

        def I_EQUAL(self):
            return self.getToken(tnsnamesParser.I_EQUAL, 0)

        def I_STRING(self):
            return self.getToken(tnsnamesParser.I_STRING, 0)

        def getRuleIndex(self):
            return tnsnamesParser.RULE_ifile

        def enterRule(self, listener):
            if hasattr(listener, "enterIfile"):
                listener.enterIfile(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIfile"):
                listener.exitIfile(self)




    def ifile(self):

        localctx = tnsnamesParser.IfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(tnsnamesParser.IFILE)
            self.state = 193
            self.match(tnsnamesParser.I_EQUAL)
            self.state = 194
            self.match(tnsnamesParser.I_STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lsnr_entryContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.Lsnr_entryContext, self).__init__(parent, invokingState)
            self.parser = parser

        def alias(self):
            return self.getTypedRuleContext(tnsnamesParser.AliasContext,0)


        def EQUAL(self):
            return self.getToken(tnsnamesParser.EQUAL, 0)

        def lsnr_description(self):
            return self.getTypedRuleContext(tnsnamesParser.Lsnr_descriptionContext,0)


        def address_list(self):
            return self.getTypedRuleContext(tnsnamesParser.Address_listContext,0)


        def address(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.AddressContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.AddressContext,i)


        def getRuleIndex(self):
            return tnsnamesParser.RULE_lsnr_entry

        def enterRule(self, listener):
            if hasattr(listener, "enterLsnr_entry"):
                listener.enterLsnr_entry(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLsnr_entry"):
                listener.exitLsnr_entry(self)




    def lsnr_entry(self):

        localctx = tnsnamesParser.Lsnr_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lsnr_entry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.alias()
            self.state = 197
            self.match(tnsnamesParser.EQUAL)
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 198
                self.lsnr_description()
                pass

            elif la_ == 2:
                self.state = 199
                self.address_list()
                pass

            elif la_ == 3:
                self.state = 201 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 200
                    self.address()
                    self.state = 203 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==tnsnamesParser.L_PAREN):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lsnr_descriptionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.Lsnr_descriptionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(tnsnamesParser.L_PAREN, 0)

        def DESCRIPTION(self):
            return self.getToken(tnsnamesParser.DESCRIPTION, 0)

        def EQUAL(self):
            return self.getToken(tnsnamesParser.EQUAL, 0)

        def R_PAREN(self):
            return self.getToken(tnsnamesParser.R_PAREN, 0)

        def address_list(self):
            return self.getTypedRuleContext(tnsnamesParser.Address_listContext,0)


        def address(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.AddressContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.AddressContext,i)


        def getRuleIndex(self):
            return tnsnamesParser.RULE_lsnr_description

        def enterRule(self, listener):
            if hasattr(listener, "enterLsnr_description"):
                listener.enterLsnr_description(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLsnr_description"):
                listener.exitLsnr_description(self)




    def lsnr_description(self):

        localctx = tnsnamesParser.Lsnr_descriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lsnr_description)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(tnsnamesParser.L_PAREN)
            self.state = 208
            self.match(tnsnamesParser.DESCRIPTION)
            self.state = 209
            self.match(tnsnamesParser.EQUAL)
            self.state = 216
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 210
                self.address_list()
                pass

            elif la_ == 2:
                self.state = 212 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 211
                    self.address()
                    self.state = 214 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==tnsnamesParser.L_PAREN):
                        break

                pass


            self.state = 218
            self.match(tnsnamesParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Alias_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.Alias_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def alias(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(tnsnamesParser.AliasContext)
            else:
                return self.getTypedRuleContext(tnsnamesParser.AliasContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(tnsnamesParser.COMMA)
            else:
                return self.getToken(tnsnamesParser.COMMA, i)

        def getRuleIndex(self):
            return tnsnamesParser.RULE_alias_list

        def enterRule(self, listener):
            if hasattr(listener, "enterAlias_list"):
                listener.enterAlias_list(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAlias_list"):
                listener.exitAlias_list(self)




    def alias_list(self):

        localctx = tnsnamesParser.Alias_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alias_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.alias()
            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tnsnamesParser.COMMA:
                self.state = 221
                self.match(tnsnamesParser.COMMA)
                self.state = 222
                self.alias()
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AliasContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.AliasContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(tnsnamesParser.ID)
            else:
                return self.getToken(tnsnamesParser.ID, i)

        def DOT(self, i=None):
            if i is None:
                return self.getTokens(tnsnamesParser.DOT)
            else:
                return self.getToken(tnsnamesParser.DOT, i)

        def getRuleIndex(self):
            return tnsnamesParser.RULE_alias

        def enterRule(self, listener):
            if hasattr(listener, "enterAlias"):
                listener.enterAlias(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAlias"):
                listener.exitAlias(self)




    def alias(self):

        localctx = tnsnamesParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_alias)
        self._la = 0 # Token type
        try:
            self.state = 236
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 228
                self.match(tnsnamesParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 229
                self.match(tnsnamesParser.ID)
                self.state = 232 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 230
                    self.match(tnsnamesParser.DOT)
                    self.state = 231
                    self.match(tnsnamesParser.ID)
                    self.state = 234 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==tnsnamesParser.DOT):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Description_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(tnsnamesParser.Description_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(tnsnamesParser.L_PAREN, 0)

        def DESCRIPTION_LIST(self):
            return self.getToken(tnsnamesParser.DESCRIPTION_LIST, 0)
